--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - CodeMaster</title>
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="/static/css/dashboard.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="#" class="menu-link" data-page="problems">
+                        <a href="/problemsDashboard" class="menu-link" data-page="problemsDashboard">
                             <i class="fas fa-code"></i>
                             <span>Problems</span>
                         </a>
@@ -339,6 +339,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="js/dashbord.js"></script>
+    <script src="/static/js/dashbord.js"></script>
 </body>
 </html>
