--- a/app/templates/forgotPassword.html
+++ b/app/templates/forgotPassword.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="e    <div class="back-button">
+        <a href="/" class="back-link">
+            <i class="fas fa-arrow-left"></i>
+            <span>Back to Login</span>
+        </a>
+    </div>ead>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - CodeMaster</title>
-    <link rel="stylesheet" href="css/forgotPassword.css">
+    <link rel="stylesheet" href="/static/css/forgotPassword.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -305,6 +309,6 @@
         </div>
     </div>
 
-    <script src="js/forgotPassword.js"></script>
+    <script src="/static/js/forgotPassword.js"></script>
 </body>
 </html>
