--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CodeMaster</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="/static/css/login.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -153,7 +153,7 @@
                             <span class="checkmark"></span>
                             <span class="checkbox-text">Remember me</span>
                         </label>
-                        <a href="#" class="forgot-password" id="forgotPassword">Forgot Password?</a>
+                        <a href="/forgot-password" class="forgot-password" id="forgotPassword">Forgot Password?</a>
                     </div>
 
                     <button type="submit" class="login-btn" id="loginBtn">
@@ -166,7 +166,7 @@
 
                 <!-- Sign Up Link -->
                 <div class="signup-link">
-                    <p>Don't have an account? <a href="register.html" id="signupLink">Create Account</a></p>
+                    <p>Don't have an account? <a href="/register" id="signupLink">Create Account</a></p>
                 </div>
             </div>
         </div>
@@ -191,6 +191,6 @@
         </div>
     </div>
 
-    <script src="js/login.js"></script>
+    <script src="/static/js/login.js"></script>
 </body>
 </html>
