--- a/app/templates/problemsDashboard.html
+++ b/app/templates/problemsDashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problems - CodeMaster</title>
-    <link rel="stylesheet" href="css/problemsDashboard.css">
+    <link rel="stylesheet" href="/static/css/problemsDashboard.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -407,6 +407,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="js/problemsDashboard.js"></script>
+    <script src="/static/js/problemsDashboard.js"></script>
 </body>
 </html>
