--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - CodeMaster</title>
-    <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="/static/css/register.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -438,6 +438,6 @@
         </div>
     </div>
 
-    <script src="js/register.js"></script>
+    <script src="/static/js/register.js"></script>
 </body>
 </html>
